[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckr-driver-mqtt"
version = "0.2.0.dev0"
description = "Deckr MQTT-backed remote device driver"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaj Siebert", email = "kaj@k-si.com" }
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "deckr>=0.2.0,<1.0.0",
    "aiomqtt>=2.0.0,<3.0.0",
    "python-decouple>=3.8,<4.0",
    "pyyaml>=6.0.3,<7.0.0",
    "watchfiles>=1.1.1,<2.0.0",
]

[project.entry-points."deckr.components"]
"deckr.drivers.mqtt" = "deckr.drivers.mqtt:component"

[project.urls]
Documentation = "https://github.com/kws/deckr-driver-mqtt#readme"
Homepage = "https://github.com/kws/deckr-driver-mqtt"
Repository = "https://github.com/kws/deckr-driver-mqtt"
"Bug Tracker" = "https://github.com/kws/deckr-driver-mqtt/issues"
"Changelog" = "https://github.com/kws/deckr-driver-mqtt/releases"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.14.14,<0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deckr"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP", "W"]
ignore = ["E203", "E501", "SIM102", "SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
